# gateway_framework_for_c

./: .travis.yml  AUTHORS  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  test-driver
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  lw_oopc.h  main.c
src/iot_platform/: AWSIoTPlatform.c  AWSIoTPlatform.h  IoTPlatform.c  IoTPlatform.h  IoTPlatformFactory.c  IoTPlatformFactory.h
tests/: Makefile.am  Makefile.in  gateway_framework_for_c_tests.c
